# finrag-chunking

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: test.yml
data/: subset_questions.jsonl
docs/: architecture.md
results/: results.json  results.md
src/finrag/: answer.py  cli.py  config.py  ingest.py  retrieve.py  util.py
src/finrag/chunk/: models.py  naive.py  structured.py  table_summary.py
src/finrag/data/: fetch.py
src/finrag/eval/: judge.py  report.py  runner.py
src/finrag/index/: store.py
src/finrag/llm/: client.py
src/finrag/parse/: docling_parser.py  tree.py
tests/: conftest.py  test_chunkers.py  test_retrieval.py  test_tree_roundtrip.py
