[project]
name = "finrag"
version = "0.1.0"
description = "Structure-aware RAG for financial filings — naive vs structure-aware chunking, benchmarked on FinanceBench with local OpenAI-compatible LLMs"
readme = "README.md"
authors = [{ name = "Rishi Chhabra" }]
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "docling>=2.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    "openai>=1.40",
    "typer>=0.12",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "matplotlib>=3.8",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
]

[project.scripts]
finrag = "finrag.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finrag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
